--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -1,36 +1,46 @@
-name: Auto Deploy por Branch
+name: Implantação manual
 
 on:
-  push:
-    branches:
-      - dev
-      - hml
-      - main
-      - service
+  workflow_dispatch:
+    inputs:
+      ambiente:
+        description: "Escolha o ambiente"
+        required: true
+        type: choice
+        options:
+          - desenvolvedor
+          - hml
+          - prd
+          - serviço
+      versao:
+        description: "Qual versão deseja implantar? Ex: 1.0.0"
+        required: true
+        default: "1.0.0"
+      servidor:
+        description: "IP do servidor de destino"
+        required: true
+        default: "192.168.1.115"
 
 jobs:
-  deploy:
+  implantar:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: 📦 Finalizar compra
+        uses: ações/finalizar_compra@v4
 
-    - name: Determinar ambiente automaticamente
-      run: |
-        if [[ "${GITHUB_REF##*/}" == "dev" ]]; then
-          export AMBIENTE=dev
-        elif [[ "${GITHUB_REF##*/}" == "hml" ]]; then
-          export AMBIENTE=hml
-        elif [[ "${GITHUB_REF##*/}" == "main" ]]; then
-          export AMBIENTE=prd
-        elif [[ "${GITHUB_REF##*/}" == "service" ]]; then
-          export AMBIENTE=service
-        fi
-        echo "Ambiente detectado: $AMBIENTE"
+      - name: 🔍 Mostrar parâmetros recebidos
+        run: |
+          echo "Ambiente: ${{ github.event.inputs.ambiente }}"
+          echo "Versão:   ${{ github.event.inputs.versao }}"
+          echo "Servidor:  ${{ github.event.inputs.servidor }}"
 
-    - name: Deploy baseado na branch
-      run: |
-        echo "Iniciando deploy para $AMBIENTE..."
-        sudo rsync -av --delete ./ /var/www/venditudo/
-        sudo systemctl restart nginx
+      - name: 🚀 Deploy no servidor
+        run: |
+          echo "Iniciando deploy no servidor ${{ github.event.inputs.servidor }}..."
+          echo "Ambiente selecionado: ${{ github.event.inputs.ambiente }}"
+          echo "Versão informada:     ${{ github.event.inputs.versao }}"
+
+          rsync -av --delete ./ /var/www/venditudo/
+
+          sudo systemctl restart nginx
