Update branches for auto-deploy workflow

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -3,10 +3,10 @@ name: Implantação automática por ramificação
 on:
   push:
     branches:
-      - desenvolvedor
+      - dev
       - hml
-      - principal
-      - serviço
+      - prd
+      - main
 
 jobs:
   implantar:
